# itDepends

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
itdepends/: analyzer.py  application.py  cli.py  deprecation.py  history.py  models.py  new_history.py  report.py  utils.py
itdepends/integrations/: __init__.py  github_api.py  pypi_api.py
itdepends/parsers/: __init__.py  base.py  requirements.py  toml_parser.py
results/FelipeGomide_itDepends/: data.csv
tests/: conftest.py  test_analyzer.py  test_cli.py  test_github_client.py  test_history.py  test_new_history.py  test_parser_txt.py  test_parsers.py  test_pypi_client.py  test_toml_parser.py  test_utils.py
