[project]
name = "itdepends"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Gomide",email = "flgomide@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydriller (>=2.9,<3.0)",
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "itdepends", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
