[project]
name = "itdepends"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Gomide",email = "flgomide@gmail.com"},
    {name = "Cecília Junqueira", email="ceciliajunq@ufmg.br"},
    {name = "Lucas Junqueira"},
    {name = "Lucca Alvarenga"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydriller (>=2.9,<3.0)",
    "click (>=8.3.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[project.scripts]
itdepends = "itdepends.cli:cli"

[tool.poetry]
packages = [{include = "itdepends"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
